--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Velveta Escort Experience</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seduza - Exclusive Companions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Velveta</h1>
-        <p>Your discreet and exclusive host experience</p>
+        <h1>Seduza</h1>
+        <p>Fun & Pleasure | Discreet & Exclusive</p>
     </header>
-    <section class="intro">
-        <h2>About Our Experience</h2>
-        <p>We offer premium companionship services, with professional hosts who are fully independent. Our platform is secure, private, and ethically managed.</p>
-    </section>
-    <section class="contact">
-        <h2>Book a Host</h2>
-        <p>Scan the QR or contact us via our private channels to book a host experience.</p>
-    </section>
+    <main>
+        <section class="profile">
+            <img src="images/placeholder.jpg" alt="Sofia">
+            <h2>Sofia</h2>
+            <p>Elegant, passionate and confident. Available for exclusive experiences.</p>
+            <ul class="rates">
+                <li>1 hour – €250</li>
+                <li>2 hours – €450</li>
+                <li>3 hours – €650</li>
+                <li>4 hours – €850</li>
+                <li>5 hours – €1000</li>
+            </ul>
+            <a href="https://t.me/seduza_contact" class="contact-button">Book via Telegram</a>
+        </section>
+    </main>
     <footer>
-        <p>&copy; 2025 Velveta. All rights reserved.</p>
+        <p>&copy; 2025 Seduza. All rights reserved.</p>
     </footer>
 </body>
 </html>
