--- a/index.html
+++ b/index.html
@@ -4,31 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seduza - Exclusive Companions</title>
+    <title>Seduza Escorts</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Seduza</h1>
-        <p>Fun & Pleasure | Discreet & Exclusive</p>
-    </header>
-    <main>
-        <section class="profile">
-            <img src="images/placeholder.jpg" alt="Sofia">
-            <h2>Sofia</h2>
-            <p>Elegant, passionate and confident. Available for exclusive experiences.</p>
-            <ul class="rates">
-                <li>1 hour – €250</li>
-                <li>2 hours – €450</li>
-                <li>3 hours – €650</li>
-                <li>4 hours – €850</li>
-                <li>5 hours – €1000</li>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Profiles</a></li>
+                <li><a href="#">Book</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-            <a href="https://t.me/seduza_contact" class="contact-button">Book via Telegram</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>Welcome to Seduza</h2>
+            <p>Exclusive pleasure & fun. All ladies are independent. Seduza is a platform only.</p>
+        </section>
+
+        <section class="profile">
+            <img src="https://via.placeholder.com/300x400" alt="Profile Photo">
+            <h3>Sofia</h3>
+            <p>Available in Amsterdam. Fun, sweet, and confident. Book now!</p>
+            <div class="rates">
+                <p>1 uur – €250</p>
+                <p>2 uur – €450</p>
+                <p>3 uur – €650</p>
+                <p>4 uur – €850</p>
+                <p>5 uur – €1000</p>
+            </div>
+            <div class="contact-buttons">
+                <a href="https://wa.me/1234567890" class="whatsapp" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+                <a href="https://t.me/seduza_profile" class="telegram" target="_blank"><i class="fab fa-telegram-plane"></i> Telegram</a>
+            </div>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Seduza. All rights reserved.</p>
+        <p>All profiles are independent. Seduza is a platform and not responsible for agreements made between individuals.</p>
     </footer>
 </body>
 </html>
